fix: reduce overlap with histogram bucket selection

--- a/src/app/shared/components/histogram-bucket-form-group/histogram-bucket-form-group.component.scss
+++ b/src/app/shared/components/histogram-bucket-form-group/histogram-bucket-form-group.component.scss
@@ -61,6 +61,10 @@
                 display: none;
             }
         }
+
+        mat-radio-button .mdc-label {
+            min-width: 100px;
+        }
     }
 }
 
